# brute-force

./: README.md  brute-force.ipynb  pyproject.toml
