[tool.poetry]
name = "brute-force"
version = "0.1.0"
description = ""
authors = ["Marwin Steiner <marwin.steiner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
